FlexDeploy 8.0/fdtlt82/FLEXDEPLOY-12131/objects/FD_Workflow__c.object
<CustomObject>
    <fields>
        <fullName>FD_Active_Version__c</fullName>
        <defaultValue>1.0</defaultValue>
        <label>Active Version</label>
        <precision>3</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FD_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FD_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FD_Path__c</fullName>
        <formula>&quot;Root/&quot; + FD_Workflow_Group__c + &quot;/&quot; + FD_Workflow_Subgroup__c + &quot;/&quot; + Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FD_Workflow_Group__c</fullName>
        <label>Workflow Group</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FD_Workflow_Subgroup__c</fullName>
        <label>Workflow Subgroup</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FD_Workflow_Type__c</fullName>
        <label>Workflow Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Deploy</fullName>
                </value>
                <value>
                    <fullName>Test Definition</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Workflow</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FD_Workflow_Type__c</columns>
        <columns>FD_Path__c</columns>
        <columns>FD_Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Workflow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>